# Text-to-Image-Generation-Pipeline

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: code-reviewer.agent.md  debugger.agent.md
.claude/rules/: api-design.md  code-style.md  ml-training.md  python-backend.md  react-best-practices.md  security.md  tailwind-patterns.md  testing.md  typescript-frontend.md
.claude/skills/add-api-endpoint/: SKILL.md
.claude/skills/add-react-component/: SKILL.md
.claude/skills/debug-inference/: SKILL.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  pyproject.toml  ruff.toml
backend/app/: config.py  main.py
backend/app/guardrails/: content_policy.py  prompt_filter.py  rate_limiter.py
backend/app/ml/: lora_manager.py  pipeline.py
backend/app/routes/: generate.py  health.py  images.py  models.py  status.py
backend/app/schemas/: __init__.py  responses.py
backend/app/utils/: errors.py  logging.py  storage.py
backend/tests/: conftest.py  test_generate.py  test_guardrails.py  test_health.py
backend/workers/: broker.py  tasks.py
docs/: API_DOCS.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: Dockerfile  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: fine-tune-uploader.tsx  gallery.tsx  image-generator.tsx  job-status.tsx  model-selector.tsx  providers.tsx
frontend/hooks/: use-generate.ts  use-job-status.ts  use-models.ts
frontend/lib/: api-client.ts  types.ts  utils.ts
frontend/stores/: image-store.ts
training/: README.md  pyproject.toml
training/configs/: dreambooth_default.yaml  lora_default.yaml
training/scripts/: evaluate.py  train_dreambooth.py  train_lora.py  upload_model.py
training/utils/: callbacks.py  data_preparation.py  metrics.py
(+6 files in other folders)
